# mpi-energy-aware

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cuda/: Makefile  a2a_aware.cu  a2a_baseline.cu  a2a_cuda_aware.cu  a2a_cuda_baseline.cu  a2a_nccl.cu  ar_aware.cu  ar_baseline.cu  ar_cuda_aware.cu  ar_cuda_baseline.cu  ar_nccl.cu  ar_nccl_freq_scaling.cu
cuda/power-profiler/: power_prof.hpp
cuda/utils/: nccl_data_type.hpp
scripts/leonardo/env/: run_ar_buffsize.sh  run_ar_launch.sh  run_ar_nchannel.sh  run_ar_nthreads.sh  set_nccl_env.sh  setvars.sh
scripts/leonardo/freq-scaling/: run_freq_scaling_all_reduce.sh  run_freq_scaling_mat_mul.sh  run_sbatch_freq_scaling.py
scripts/leonardo/freq-scaling/plot/: collectives_freq_scaling.py
scripts/leonardo/nccl/: nccl_all_params.sh  nccl_ar_buffsize.sh  nccl_ar_launch.sh  nccl_ar_nchannels.sh  nccl_ar_nthreads.sh  nccl_ar_tuning.sh  run_all.py
scripts/leonardo/nccl/parse-log-file/: parse_host_device_energy.py  parse_perf.py  parse_power.py
scripts/leonardo/parse-slurm-logs/: parse_slurm_logs_with_nthreads.py
scripts/leonardo/plots/: edp.py  nccl_ar_nthreads.py  nccl_ar_nthreads_edp.py  nthreads_multi_obj.py  perf_energy.py
scripts/leonardo/plots/nccl/: nccl_all_params.py  (+2 more)
scripts/marenostrum/env/: set_nccl_env.sh
scripts/marenostrum/parse-log/: parse_host_device_energy.py
scripts/marenostrum/sbatch/: nccl_a2a_tuning.sh  nccl_ar_tuning.sh
scripts/power-reading/: power_reading.py  power_reading_nthreads.py
scripts/run-sbatch/: run_all_param.py
src/: ar_aware.cpp  ar_baseline.cpp
(+6 files in other folders)
